compiler/tests/errortests/temp_reference.txt
FILENAME:9:13: error: Cannot return a reference for a mutable local variable.
    return &value;
            ^----
